vault-server/main.tf
# Configure the Microsoft Azure Provider
provider "azurerm" {
    version = "~>2.0"
    features {}
}

# Create a resource group if it doesn't exist
resource "azurerm_resource_group" "myvaultgroup" {
    name     = "myResourceGroup"
    location = "eastus"

    tags = {
        environment = "Vault Server Demo"
    }
}

# Create virtual network
resource "azurerm_virtual_network" "myvaultnetwork" {
    name                = "myVnet"
    address_space       = ["10.0.0.0/16"]
    location            = "eastus"
    resource_group_name = azurerm_resource_group.myvaultgroup.name

    tags = {
        environment = "Vault Server Demo"
    }
}

# Create subnet
resource "azurerm_subnet" "myvaultsubnet" {
    name                 = "mySubnet"
    resource_group_name  = azurerm_resource_group.myvaultgroup.name
    virtual_network_name = azurerm_virtual_network.myvaultnetwork.name
    address_prefixes       = ["10.0.1.0/24"]
}

# Create public IPs
resource "azurerm_public_ip" "myvaultpublicip" {
    name                         = "myPublicIP"
    location                     = "eastus"
    resource_group_name          = azurerm_resource_group.myvaultgroup.name
    allocation_method            = "Dynamic"

    tags = {
        environment = "Vault Server Demo"
    }
}

# Create Network Security Group and rule
resource "azurerm_network_security_group" "myvaultnsg" {
    name                = "myNetworkSecurityGroup"
    location            = "eastus"
    resource_group_name = azurerm_resource_group.myvaultgroup.name

    security_rule {
        name                       = "SSH"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }

    security_rule {
        name                       = "VAULT"
        priority                   = 1002
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "8200"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }

    tags = {
        environment = "Vault Server Demo"
    }
}

# Create network interface
resource "azurerm_network_interface" "myvaultnic" {
    name                      = "myNIC"
    location                  = "eastus"
    resource_group_name       = azurerm_resource_group.myvaultgroup.name

    ip_configuration {
        name                          = "myNicConfiguration"
        subnet_id                     = azurerm_subnet.myvaultsubnet.id
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id          = azurerm_public_ip.myvaultpublicip.id
    }

    tags = {
        environment = "Vault Server Demo"
    }
}

# Connect the security group to the network interface
resource "azurerm_network_interface_security_group_association" "example" {
    network_interface_id      = azurerm_network_interface.myvaultnic.id
    network_security_group_id = azurerm_network_security_group.myvaultnsg.id
}

# Generate random text for a unique storage account name
resource "random_id" "randomId" {
    keepers = {
        # Generate a new ID only when a new resource group is defined
        resource_group = azurerm_resource_group.myvaultgroup.name
    }

    byte_length = 8
}

# Create storage account for boot diagnostics
resource "azurerm_storage_account" "mystorageaccount" {
    name                        = "diag${random_id.randomId.hex}"
    resource_group_name         = azurerm_resource_group.myvaultgroup.name
    location                    = "eastus"
    account_tier                = "Standard"
    account_replication_type    = "LRS"

    tags = {
        environment = "Vault Server Demo"
    }
}

# Create (and display) an SSH key
resource "tls_private_key" "example_ssh" {
  algorithm = "RSA"
  rsa_bits = 4096
}

resource "local_file" "key" {
  filename = "key.pem"
  content  = "${tls_private_key.example_ssh.private_key_pem}"
}

# Create virtual machine
resource "azurerm_linux_virtual_machine" "myvaultvm" {
    name                  = "vault-server"
    location              = "eastus"
    resource_group_name   = azurerm_resource_group.myvaultgroup.name
    network_interface_ids = [azurerm_network_interface.myvaultnic.id]
    size                  = "Standard_DS1_v2"

    os_disk {
        name              = "myOsDisk"
        caching           = "ReadWrite"
        storage_account_type = "Premium_LRS"
    }

    source_image_reference {
        publisher = "OpenLogic"
        offer     = "CentOS"
        sku       = "7.5"
        version   = "latest"
    }

    computer_name  = "vault-server"
    admin_username = "azureuser"
    disable_password_authentication = true

    admin_ssh_key {
        username       = "azureuser"
        public_key     = tls_private_key.example_ssh.public_key_openssh
    }

    boot_diagnostics {
        storage_account_uri = azurerm_storage_account.mystorageaccount.primary_blob_endpoint
    }

    tags = {
        environment = "Vault Server Demo"
    }
}
